docs/proxy/traefik/tls-sni/sample-cluster-sample-dc.ingressroutetcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sample-cluster-sample-dc
spec:
  entryPoints:
    - cassandra
  routes:
    # Match is the rule corresponding to an underlying router.
    - match: HostSNI(`d1ba31b6-4b0e-4a7a-ba7e-8721271ae99a`)
      services:
        - name: sample-cluster-sample-dc-sample-rack-sts-0
          port: 9042
          terminationDelay: 400
          weight: 10
  tls:
    domains:
    - main: sample-dc.sample-cluster
      sans:
      - d1ba31b6-4b0e-4a7a-ba7e-8721271ae99a
    options:
      name: sample-cluster-sample-dc-options
      namespace: default
    secretName: sample-cluster-sample-dc-cert
    passthrough: false
